# scanbuttond

./: .gitignore  AUTHORS  BUGS  Makefile.am  README  architecture.fig  configure.ac  configure.in  scanbuttond.c
backends/: Makefile.am  artec_eplus48u.c  epson.c  genesys.c  gt68xx.c  hp3500.c  hp3900.c  hp5590.c  meta.c  meta.conf  mustek.c  niash.c  plustek.c  plustek_umax.c  snapscan.c
doc/: epson.txt  snapscan.txt
include/scanbuttond/: config.h.in  libusbi.h  loader.h
interface/: Makefile.am  libusbi.c
lib/: .gitignore  loader.c
scripts/: Makefile.am  buttonpressed.sh.example  initscanner.sh.example
